apps/base/ollama/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ollama
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
        - name: ollama
          image: ollama/ollama:latest
          ports:
            - containerPort: 11434
          resources:
            requests:
              memory: "20Gi"
            limits:
              memory: "32Gi"
          volumeMounts:
            - name: ollama-storage
              mountPath: /root/.ollama
      nodeSelector:
        ramtype: ramtype
      volumes:
        - name: ollama-storage
          persistentVolumeClaim:
            claimName: ollama-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: open-webui
  namespace: ollama
spec:
  replicas: 1
  selector:
    matchLabels:
      app: open-webui
  template:
    metadata:
      labels:
        app: open-webui
    spec:
      containers:
        - name: open-webui
          image: ghcr.io/open-webui/open-webui:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
            limits:
              memory: "4Gi"
          volumeMounts:
            - name: open-webui-storage
              mountPath: /app/backend/data
      volumes:
        - name: open-webui-storage
          persistentVolumeClaim:
            claimName: openwebui-pvc
