apps/base/ollama/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 80
      targetPort: 11434
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: open-webui-service
  namespace: ollama
spec:
  selector:
    app: open-webui
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
