apps/base/ollama/05-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: open-webui-ingress
  namespace: ollama
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`open-webui.k8s.tommahs.nl`)
      priority: 10
      middlewares:
        - name: redirect-to-https
      services:
        - kind: Service
          name: open-webui-service
          namespace: ollama
          passHostHeader: true
          port: 80
          responseForwarding:
            flushInterval: 1ms
  tls:
    secretName: open-webui-k8s-tommahs-nl-tls
